# racani-seminar-2021

./: README.md  meson.build
01/: package-lock.json  package.json
01/src/: index.js
02/: webpack.config.js
02/src/: index.js
03/: resources.txt
03/data/shaders/: infinite_balls.glsl  mandelbulb.glsl  mandelbulb_light.glsl  sierpinski.glsl  single_ball.glsl
03/include/irg/: camera.hpp  keyboard.hpp  obmodel.hpp  ownership.hpp
03/src/: main.cpp
03/src/glad/: glad.c
03/src/irg/: camera.cpp  common.cpp  keyboard.cpp  window.cpp
data/shaders/: frag.glsl  infinite_balls_mirrored.glsl  vert.glsl
include/glad/: glad.h
include/irg/: camera.hpp  common.hpp  generic_mesh.hpp  irg.hpp  keyboard.hpp  mesh.hpp  mouse.hpp  ownership.hpp  primitive.hpp  scene.hpp  shader.hpp  shape.hpp  texture.hpp  window.hpp
src/: main.cpp
src/irg/: camera.cpp  common.cpp  mouse.cpp  primitive.cpp  scene.cpp  shape.cpp  texture.cpp
videos/: mandelbulb_rotate.mov  sierpinski.mov
